--- a/styles.css
+++ b/styles.css
@@ -1,39 +1,85 @@
+html {
+	font-family: Arial;
+	font-size: 10;
+}
+
 div.block {
     /* border-radius: 25px; */
-	border: 2px solid black;
+	/* border: 2px solid black; */
     /* padding: 20px; */
     width: 100%;
     
 }
 
 #header {
-	height: 15px;
+	height: 20px;
+	text-align: right;
+	padding: 5px;
+	border-bottom: 2px solid #B8B8B8;
+	border-top: 2px solid #B8B8B8;
 }
 
 #footer {
-	height: 15px;
+	height: 20px;
+	text-align: center;
+	padding: 5px;
+	border-top: 2px solid #B8B8B8 ;
 }
 
-#main {
-	height: 150px;	
+#main{
+	height: 350px;	
 }
 
-div.block div {
+div#left,div#middle,div#right {
 	height:100%;
 }
 
 #left {
-background:red;
-width:200px;
-float:left;
+	background:#F5F5F5;
+	width:200px;
+	float:left;
 }
 
 #middle {
-background:blue;
-width:80%;
-float:left;
+	background:#F0F0F0 ;
+	width:65%;
+	float:left;
+	border-left: 2px solid #B8B8B8;
+	border-right: 2px solid #B8B8B8;
+}
+
+.login {
+  	background: #E0E0E0 ;
+  	border: 2px solid #B8B8B8;;
+  	margin-left: 10px;
+  	margin-top: 10px;
+  	margin-right: 10px;
+  	height: 200px;
+}
+
+.login div#align_login_right{
+	width: 30%;
+	float: left;
+	height: 100%;
+	text-align: right;
+	padding-top: 10px;
+	padding-right: 15px;
+}
+label#pass {
+	margin-top: 5px;
+	margin-bottom: 3px;
+	display: block;
+}
+.login div#align_login_left{
+	float: left;
+	height: 100%;
+	padding-top: 10px;
+}
+input#password {
+	margin-top:3px;
 }
 
 #right {
-background:gray;
+	background:#F5F5F5;
+
 }
