All ready to show

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,11 @@ html {
 	font-size: 10;
 }
 
+body {
+	height: 10vh;
+	overflow: hidden;
+}
+
 div.block {
     /* border-radius: 25px; */
 	/* border: 2px solid black; */
@@ -31,6 +36,7 @@ label#super_header{
 }
 
 #footer {
+	background-color: white;
 	height: 20px;
 	text-align: center;
 	padding: 5px;
@@ -40,7 +46,7 @@ label#super_header{
 }
 
 #main{
-	height: 490px;	
+	height: 2000px;	
 	background-image: url(Grey.jpg);
 }
 
@@ -50,8 +56,9 @@ div#left,div#middle,div#right {
 
 #left {
 	background:transparent;
-	width:200px;
+	width:15%;
 	float:left;
+	padding: 5px;
 }
 
 #middle {
@@ -93,12 +100,61 @@ input#password {
 	margin-top:3px;
 }
 
+.frame{
+	background: #E0E0E0 ;
+  	border: 2px solid #B8B8B8;;
+  	margin-left: 10px;
+  	margin-top: 10px;
+  	margin-right: 10px;
+  	padding: 5px;
+}
+
+input#input{
+	margin-top:5px;
+	width:10%;
+}
+input#line1{
+	width: 88%;
+}
+input#line2{
+	width: 98%;
+	margin-bottom: 3px;
+}
+
+label#upload_file{
+	margin: 5px;
+}
+
 #right {
 	background:transparent;
 	padding: 5px;
-	
+	float:left;
+	width: 18%;
 
 }
 label#statistic {
-	
+	margin: 10px;
+}
+
+
+
+table {
+	margin: 5px;
+	width: 99%;
+}
+
+#tr_top{
+	border-top: 2px solid #A0A0A0 ;
+}
+
+td {
+    border-bottom: 2px solid #A0A0A0 ;
+    text-align: center;
+}
+
+#td_third{
+	width: 25%;
+}
+#td_second, #td_fourth{
+	width: 15%;
 }
